tests/data/placebo/sg_used_cross_ref/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "sincere-amoeba",
                "GroupName": "sincere-amoeba",
                "IpPermissions": [],
                "OwnerId": "644160558196",
                "GroupId": "sg-01ba3c57af54ef22c",
                "IpPermissionsEgress": [],
                "VpcId": "vpc-03a8ce8bb254b625b"
            },
            {
                "Description": "oriented-sole",
                "GroupName": "oriented-sole",
                "IpPermissions": [],
                "OwnerId": "644160558196",
                "GroupId": "sg-073c8f4fb3b58731d",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-01ba3c57af54ef22c",
                                "UserId": "644160558196"
                            }
                        ]
                    }
                ],
                "VpcId": "vpc-03a8ce8bb254b625b"
            },
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-0574847ed3b27389b",
                                "UserId": "644160558196"
                            }
                        ]
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-0574847ed3b27389b",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-0695c27b6e4db3159"
            },
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-0d1564b340cac910f",
                                "UserId": "644160558196"
                            }
                        ]
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-0d1564b340cac910f",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-03a8ce8bb254b625b"
            }
        ],
        "ResponseMetadata": {}
    }
}
