tests/data/placebo/sg_used_cross_ref/ec2.DescribeSecurityGroups_2.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-0574847ed3b27389b",
                                "UserId": "644160558196"
                            }
                        ]
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-0574847ed3b27389b",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-0695c27b6e4db3159"
            },
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-0c947f3b4bda97fd3",
                                "UserId": "644160558196"
                            }
                        ]
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-0c947f3b4bda97fd3",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-0763c6964bb24f0ea"
            },
            {
                "Description": "moved-sawfly",
                "GroupName": "moved-sawfly",
                "IpPermissions": [],
                "OwnerId": "644160558196",
                "GroupId": "sg-0826c578f515cc65e",
                "IpPermissionsEgress": [],
                "VpcId": "vpc-0763c6964bb24f0ea"
            },
            {
                "Description": "engaged-airedale",
                "GroupName": "engaged-airedale",
                "IpPermissions": [],
                "OwnerId": "644160558196",
                "GroupId": "sg-0c2f2b3dd6a9935aa",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-0826c578f515cc65e",
                                "UserId": "644160558196"
                            }
                        ]
                    }
                ],
                "VpcId": "vpc-0763c6964bb24f0ea"
            }
        ],
        "ResponseMetadata": {}
    }
}
